Update Counting DNA Nucleotides.ipynb

--- a/Counting DNA Nucleotides.ipynb
+++ b/Counting DNA Nucleotides.ipynb
@@ -188,13 +188,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "In DNA strings, symbols 'A' and 'T' are complements of each other, as are 'C' and 'G'.\n",
+    "In <b><font color='green'>DNA</font></b> strings, symbols <font color='blue'>'A'</font> and <font color='blue'>'T'</font> are complements of each other, as are <font color='blue'>'C'</font> and <font color='blue'>'G'</font>.\n",
     "\n",
-    "The reverse complement of a DNA string s is the string sc formed by reversing the symbols of s, then taking the complement of each symbol (e.g., the reverse complement of \"GTCA\" is \"TGAC\").\n",
+    "The reverse complement of a <b><font color='blue'>DNA</font></b> string <I>s</I> is the string <I>s_c</I> formed by reversing the symbols of <I>s</I>, then taking the complement of each symbol (e.g., the reverse complement of <b><font color='red'>"GTCA"</font></b> is <b><font color='red'>"TGAC"</font></b>).\n",
     "\n",
-    "Given: A DNA string s of length at most 1000 bp.\n",
+    "<b><font color='red'>Given</font></b>: A <b><font color='blue'>DNA</font></b> string <I>s</I> of length at most 1000 bp.\n",
     "\n",
-    "Return: The reverse complement sc of s."
+    "<b><font color='red'>Return</font></b>: The reverse complement <I>s_c</I> of <I>s</I>."
    ]
   },
   {
