--- a/Counting DNA Nucleotides.ipynb
+++ b/Counting DNA Nucleotides.ipynb
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "adf8c343",
+   "id": "29148531",
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a005dde",
+   "id": "ddf951ab",
    "metadata": {},
    "source": [
     "### Or"
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25ee09f9",
+   "id": "378d82e4",
    "metadata": {},
    "source": [
     "### 2. Transcribing DNA into RNA"
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4d5d51f",
+   "id": "cd36b7cb",
    "metadata": {},
    "source": [
     "An <b><font color='green'>RNA</font></b> string is a string formed from the alphabet containing <font color='blue'>'A', 'C', 'G'</font>, and <font color='blue'>'U'</font>.\n",
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "06ff5f67",
+   "id": "e21ea0b5",
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93692bc6",
+   "id": "25045587",
    "metadata": {},
    "source": [
     "### Or"
@@ -157,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "87adc346",
+   "id": "fe8d0d70",
    "metadata": {},
    "outputs": [
     {
@@ -175,22 +175,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a4e2330",
+   "id": "cb291d20",
    "metadata": {},
    "source": [
     "### 3. The Secondary and Tertiary Structures of DNA"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "20df4749",
+   "cell_type": "markdown",
+   "id": "f346b9cc",
    "metadata": {},
-   "outputs": [],
    "source": [
     "In <b><font color='green'>DNA</font></b> strings, symbols <font color='blue'>'A'</font> and <font color='blue'>'T'</font> are complements of each other, as are <font color='blue'>'C'</font> and <font color='blue'>'G'</font>.\n",
     "\n",
-    "The reverse complement of a <b><font color='blue'>DNA</font></b> string <I>s</I> is the string <I>s_c</I> formed by reversing the symbols of <I>s</I>, then taking the complement of each symbol (e.g., the reverse complement of <b><font color='red'>"GTCA"</font></b> is <b><font color='red'>"TGAC"</font></b>).\n",
+    "The reverse complement of a <b><font color='blue'>DNA</font></b> string <I>s</I> is the string <I>s_c</I> formed by reversing the symbols of <I>s</I>, then taking the complement of each symbol (e.g., the reverse complement of <b><font color='red'>\"GTCA\"</font></b> is <b><font color='red'>\"TGAC\"</font></b>).\n",
     "\n",
     "<b><font color='red'>Given</font></b>: A <b><font color='blue'>DNA</font></b> string <I>s</I> of length at most 1000 bp.\n",
     "\n",
@@ -200,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "87ba0368",
+   "id": "d32c0cb1",
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +229,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da101844",
+   "id": "f881a807",
    "metadata": {},
    "source": [
     "### Or"
@@ -240,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "b5c96883",
+   "id": "d868646d",
    "metadata": {},
    "outputs": [
     {
